--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: This is a website
-subtitle: It doesn't have any content yet
+title: Michael Gospodinoff
+subtitle: Data Science and Machine Learning
 use-site-title: true
 ---
 
